--- a/gnocchi/uwsgi.ini
+++ b/gnocchi/uwsgi.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-http = 0.0.0.0:8041
+http-socket = 0.0.0.0:8041
 add-header = Connection: close
 wsgi-file = /usr/local/bin/gnocchi-api
 master = true
